<resources>
    <string name="title_events_list">Events List</string>
    <string name="title_event_map">Events Map</string>
    <string name="title_subscribtion">Subscribtion</string>
    <string name="title_pointsOfInterest">Points of interest</string>
    <string name="title_profile">Profile</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="app_name">Yetee</string>
    <string name="label_password">Password: </string>
    <string name="label_username">Username: </string>
    <string name="label_eventName">Name: </string>
    <string name="label_eventDate">Date: </string>
    <string name="label_eventCategory">Category: </string>
    <string name="label_eventCompany">Company: </string>
    <string name="label_eventDescription">Description: </string>
    <string name="label_eventTicketPrice">Ticket price(€):</string>
    <string name="label_eventAddress">Address: </string>
    <string name="label_eventZIP">ZIP: </string>
    <string name="label_city">City: </string>
    <string name="label_userFirstName">First Name: </string>
    <string name="label_userLastName">Last Name: </string>
    <string name="label_userAddress">Address: </string>
    <string name="label_userZIP">ZIP: </string>
    <string name="label_userCity">City: </string>
    <string name="label_iban">IBAN Account: </string>
    <string name="hint_username">Username</string>
    <string name="hint_firstname_register">First name</string>
    <string name="hint_lastname_register">Last name</string>
    <string name="hint_birth_date_register">Birth date</string>
    <string name="hint_login_register">Username</string>
    <string name="hint_ZIP_register">ZIP</string>
    <string name="hint_address_register">Address</string>
    <string name="hint_iban_register">IBAN Account</string>
    <string name="hint_tel_number_register">Phone number</string>
    <string name="button_register">Sign up</string>
    <string name="hint_city_register">City</string>
    <string name="hint_password_register">Password</string>
    <string name="hint_password_confirmation_register">Password confirmation</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Log in</string>
    <string name="button_pointsOfIInterest">Points of interest</string>
    <string name="button_signup">Sign up</string>
    <string name="error_login">Incorrect login</string>
    <string name="error_login_exists">Your email is already used.</string>
    <string name="error_password">Incorrect password</string>
    <string name="error_connectivity">Can\'t connect to service. Check your network or try again later.</string>
    <string name="error_internal">The service is hit by an internal issue. Try again later.</string>
    <string name="error_unexpected">Unexpected error. Try again.</string>
    <string name="error_zip_not_4_digits">ZIP must have 4 digits</string>
    <string name="error_empty_username">Username is empty</string>
    <string name="error_empty_password">Password is empty</string>
    <string name="error_empty_confirmation_password">Confirmation password is empty</string>
    <string name="error_empty_firstname">Firstname is empty</string>
    <string name="error_empty_lastname">Lastname is empty</string>
    <string name="error_empty_address">Address is empty</string>
    <string name="error_empty_tel_number">Phone number is empty</string>
    <string name="error_empty_city">City is empty</string>
    <string name="error_passwords_not_match">Password and confirmation password not match</string>
    <string name="error_empty_zip">ZIP is empty</string>
    <string name="error_birthdate_future">Birth date must be in past</string>
    <string name="error_already_sub">Already subscribed to this event</string>
    <string name="success_subsribtion">Subscribed to this event</string>
    <string name="title_main_content">Main Content</string>
</resources>
